refactor events to supports search and sorting
